linkdata: Move functions into directory. Collapse all data into a single object. Make work offline. Various updates & fixes.

--- a/linkdata/scriptlinks.css
+++ b/linkdata/scriptlinks.css
@@ -47,3 +47,12 @@ iframe {
 #out .status { font-size:80%; margin: 0 0 4px 0; }
 
 #out .scripttype { font-size: 90%; }
+
+
+span#version {
+  padding: 8px 20px;
+  background-color: #f5f5f5;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
